@@ -1,13 +1,17 @@
 package fptd.truthDiscovery.optimized;
 
-import fptd.Params;
-import fptd.offline.*;
-
-import java.util.ArrayList;
-import java.util.List;
-
 import static fptd.Params.IS_PRINT_EXE_INFO;
 import static fptd.Params.N;
+
+import fptd.Params;
+import fptd.offline.FakeParty;
+import fptd.offline.OfflineCircuit;
+import fptd.offline.OfflineGate;
+import fptd.offline.OfflineInputGate;
+import fptd.offline.OfflineOutputGate;
+import fptd.offline.OfflineReduceGate;
+import java.util.ArrayList;
+import java.util.List;
 
 public class TDOfflineOptimal {
 
@@ -26,9 +30,9 @@ public class TDOfflineOptimal {
         OfflineCircuit circuit = new OfflineCircuit(fakeParty);
 
         int dim = this.examNum;
-        OfflineInputGate in_truth = circuit.input(0, dim);;
+        OfflineInputGate in_truth = circuit.input(0, dim);
         List<OfflineInputGate> in_sensing_data_list = new ArrayList<>();
-        for(int workerIdx = 0; workerIdx < this.workerNum; workerIdx++) {
+        for (int workerIdx = 0; workerIdx < this.workerNum; workerIdx++) {
             OfflineInputGate in_sensing_data = circuit.input(0, dim);
             in_sensing_data_list.add(in_sensing_data);
         }
@@ -36,16 +40,16 @@ public class TDOfflineOptimal {
         OfflineGate estimatedTruthGate = in_truth;
 
         // The input for the phase of calculating truth values
-        List<OfflineGate> in_sensing_data_per_exam_gates= new ArrayList<>();
-        for(int examIdx = 0; examIdx < this.examNum; examIdx++) {
+        List<OfflineGate> in_sensing_data_per_exam_gates = new ArrayList<>();
+        for (int examIdx = 0; examIdx < this.examNum; examIdx++) {
             int dimension = workerNum;
             OfflineInputGate in_sensing_data_per_exam = circuit.input(0, dimension);
             in_sensing_data_per_exam_gates.add(in_sensing_data_per_exam);
         }
 
-        for(int iter = 0; iter < Params.ITER_TD; iter++) {
+        for (int iter = 0; iter < Params.ITER_TD; iter++) {
             List<OfflineGate> subGates = new ArrayList<>();
-            for(int workerIdx = 0; workerIdx < this.workerNum; workerIdx++) {
+            for (int workerIdx = 0; workerIdx < this.workerNum; workerIdx++) {
                 OfflineGate subGate = circuit.subtract(in_sensing_data_list.get(workerIdx), estimatedTruthGate);
                 subGates.add(subGate);
             }
@@ -54,8 +58,8 @@ public class TDOfflineOptimal {
             OfflineGate divGate = circuit.dotProdThenDivGate(subGates, subGates, circuit.output(sumUpAllDistance));
             OfflineGate weightGate = circuit.log(divGate);
 
-            if(IS_PRINT_EXE_INFO){
-                OfflineOutputGate in_sensing_dataGate = circuit.output(in_sensing_data_list.get(0));
+            if (IS_PRINT_EXE_INFO) {
+                OfflineOutputGate in_sensing_dataGate = circuit.output(in_sensing_data_list.getFirst());
                 circuit.addEndpoint(in_sensing_dataGate);
 
                 OfflineOutputGate estimatedTruthOutputGate = circuit.output(estimatedTruthGate);
@@ -71,7 +75,7 @@ public class TDOfflineOptimal {
             /*************To calculate truth values*****************/
             //某些worker可能不提供数据给某exam
             OfflineReduceGate[] sumWeightGates = new OfflineReduceGate[examNum];
-            for(int examIdx = 0; examIdx < this.examNum; examIdx++) {
+            for (int examIdx = 0; examIdx < this.examNum; examIdx++) {
                 OfflineReduceGate sumOfWeightsGate = circuit.reduce(weightGate);
 //                FakeOutputGate outputWeightGate = circuit.output(sumOfWeightsGate);
                 sumWeightGates[examIdx] = sumOfWeightsGate;
@@ -80,24 +84,25 @@ public class TDOfflineOptimal {
             OfflineOutputGate outputSumOfWeightsGate = circuit.output(circuit.combination(sumWeightGates));
 
             List<OfflineGate> weightGates = new ArrayList<>();
-            for(int examIdx = 0; examIdx < this.examNum; examIdx++) {
+            for (int examIdx = 0; examIdx < this.examNum; examIdx++) {
                 weightGates.add(weightGate);
             }
             estimatedTruthGate = circuit.dotProdThenDivGate(in_sensing_data_per_exam_gates,
                     weightGates, outputSumOfWeightsGate);
 
-            if(IS_PRINT_EXE_INFO) {
+            if (IS_PRINT_EXE_INFO) {
                 //目的是打印每一个iter下的真值
                 OfflineOutputGate estimatedTruthOutputGate = circuit.output(estimatedTruthGate);
                 circuit.output(estimatedTruthOutputGate);
                 circuit.addEndpoint(estimatedTruthOutputGate);
 
-                OfflineOutputGate in_sensing_data_per_exam_gatesTemp = circuit.output(in_sensing_data_per_exam_gates.get(0));
+                OfflineOutputGate in_sensing_data_per_exam_gatesTemp = circuit.output(
+                        in_sensing_data_per_exam_gates.getFirst());
                 circuit.output(in_sensing_data_per_exam_gatesTemp);
                 circuit.addEndpoint(in_sensing_data_per_exam_gatesTemp);
             }
         }
-        if(!IS_PRINT_EXE_INFO) {
+        if (!IS_PRINT_EXE_INFO) {
             OfflineOutputGate truthOutputGate = circuit.output(estimatedTruthGate);
             circuit.addEndpoint(truthOutputGate);//The second endpoint
         }
